--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
     "@chainlink/contracts": "^0.6.1",
-    "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@openzeppelin/contracts": "^4.9.2",
+    "@openzeppelin/test-helpers": "^0.5.16",
     "dotenv": "^16.3.1",
     "hardhat": "^2.16.1",
     "hardhat-deploy": "^0.11.34",
@@ -14,6 +14,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^1.0.0",
+    "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
@@ -21,6 +22,7 @@
     "ethers": "^6.6.2",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
-    "typechain": "^8.1.0"
+    "typechain": "^8.1.0",
+    "web3": "^1.10.0"
   }
 }
