--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "uuidv4": "^6.2.13",
     "viem": "^1.3.0",
     "wagmi": "^1.3.9"
   }
